--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,7 @@ before_install:
   - tar -xzvf SDL2-2.0.8.tar.gz
 install:
   - (cd SDL2-2.0.8 && ./configure && make && sudo make install)
+
+script:
+  - cargo build --all-targets --verbose
+  - cargo test --verbose
