Loosen up version requirements

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ license = "MIT/Apache-2.0"
 travis-ci = { repository = "michaelfairley/rust-imgui-sdl2" }
 
 [dependencies]
-imgui = "0.0.18"
-sdl2 = "0.31.0"
+imgui = "^0.0"
+sdl2 = "^0"
 
 [dev-dependencies]
 gl = "0.10.0"
