--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "imgui-sdl2"
 description = "SDL2 Input handling for imgui-rs"
-version = "0.14.0"
+version = "0.15.0"
 authors = ["Michael Fairley <michael@michaelfairley.com>"]
 homepage = "https://github.com/michaelfairley/rust-imgui-sdl2"
 repository = "https://github.com/michaelfairley/rust-imgui-sdl2"
@@ -13,9 +13,9 @@ license = "MIT/Apache-2.0"
 travis-ci = { repository = "michaelfairley/rust-imgui-sdl2" }
 
 [dependencies]
-imgui = "0.7"
-sdl2 = "0.34"
+imgui = "^0.8"
+sdl2 = "0.35"
 
 [dev-dependencies]
 gl = "0.10.0"
-imgui-opengl-renderer = "0.11"
+imgui-opengl-renderer = {version= "0.11.1", git="https://github.com/Mimerme/rust-imgui-opengl-renderer"}
