--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ categories = ["gui"]
 license = "MIT/Apache-2.0"
 
 [dependencies]
-imgui = "0.8"
+imgui = ">=0.8.0, <0.10.0"
 sdl2 = ">=0.34, <0.36"
 
 [dev-dependencies]
